--- a/EasyBookShop/EasyBookShop.csproj
+++ b/EasyBookShop/EasyBookShop.csproj
@@ -159,6 +159,12 @@
     <Compile Include="views\NewItem.Designer.cs">
       <DependentUpon>NewItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="views\UpdateItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="views\UpdateItem.Designer.cs">
+      <DependentUpon>UpdateItem.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="views\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="views\NewItem.resx">
       <DependentUpon>NewItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\UpdateItem.resx">
+      <DependentUpon>UpdateItem.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="models\DbEasyBookShop.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
