--- a/EasyBookShop/EasyBookShop.csproj
+++ b/EasyBookShop/EasyBookShop.csproj
@@ -63,10 +63,12 @@
     <Compile Include="com.easy.controal\Perchuspopup_controaler.cs" />
     <Compile Include="com.easy.controal\Productcontroaler.cs" />
     <Compile Include="com.easy.model\Customer.cs" />
+    <Compile Include="com.easy.model\Item.cs" />
     <Compile Include="com.easy.model\Login.cs" />
     <Compile Include="com.easy.model\Puschespopup.cs" />
     <Compile Include="com.easy.model\Wholesale.cs" />
     <Compile Include="com.easy.model\Whole_Sale.cs" />
+    <Compile Include="com.easy.utility\Customer_validate.cs" />
     <Compile Include="com.easy.utility\DBconnection.cs" />
     <Compile Include="com.easy.utility\Redtxt.cs" />
     <Compile Include="com.easy.utility\Spliter.cs" />
